<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/empty"
        android:icon="@android:drawable/ic_menu_more"
        android:orderInCategory="1"
        android:title="@string/options"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_settings"
                android:icon="@android:drawable/ic_menu_preferences"
                android:orderInCategory="1"
                android:title="@string/action_settings"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/action_feedback"
                android:icon="@android:drawable/ic_dialog_email"
                android:orderInCategory="99"
                android:title="@string/action_feedback"
                app:showAsAction="always|withText"/>

            <item
                android:id="@+id/action_exit"
                android:icon="@android:drawable/ic_menu_close_clear_cancel"
                android:orderInCategory="100"
                android:title="@string/action_exit"
                app:showAsAction="always|withText"/>
        </menu>
    </item>
</menu>
